# HeterGraphRAG

./: .gitignore  ENV_SETUP.md  METHODOLOGY.md  README.md  __init__.py  bgem3_retriever.py  config.yaml  environment.yml  graph_builder.py  intent_representation.py  main.py  offline_struct_prior.py  pyproject.toml  rag_system.py  requirements.txt  run_coarse_single.py  run_hotpot_preprocess.py  run_main_hotpot_chunks.py  structural_centrality_ranker.py
__pycache__/: intent_representation.cpython-313.pyc.2202147610352  rag_system.cpython-313.pyc.2098169202288
experiments/: 00_check_env.py  01_probe_data.py  02_build_index.py  03_eval_retrieval.py  04_build_graph_subset.py  05_query_one.py  06_run_batch.py  common.py
experiments/__pycache__/: common.cpython-313.pyc.2620785228560
experiments/artifacts/: 01_probe_data_report.json
scripts/: run_coarse_single.py  run_hotpot_preprocess.py
src/: answer_generator.py  bgem3_retriever.py  graph_builder.py  intent_representation.py  offline_struct_prior.py  rag_system.py  run_hotpot_preprocess.py  semantic_anchor_selector.py  structural_centrality_ranker.py
src/HeterGraphRAG/: __init__.py  answer_generator.py  bgem3_retriever.py  graph_builder.py  hotpot_utils.py  intent_representation.py  offline_struct_prior.py  rag_system.py  semantic_anchor_selector.py  structural_centrality_ranker.py
