[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "HeterGraphRAG"
version = "0.1.0"
description = "异构图增强的检索增强生成实验项目。"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "networkx>=3.0,<4",
    "requests>=2.31,<3",
    "tqdm>=4.66,<5",
    "FlagEmbedding>=1.2.11",
    "torch>=2.1",
    "transformers>=4.40",
    "sentence-transformers>=2.6",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25",
    "faiss-cpu>=1.7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
